jlatexmath (0.9.7)
	* Blanks after a command were skipped in text mode.

	* Extend the way to code colors in \textcolor, \colorbox, \fcolorbox, 
	  fgcolor and bgcolor.
	  Now \textcolor{color} where color could be 255,0,0 (int RGB) or
          1.0,0,0 (float RGB) or 1.0,0,0,0.5 (float CMYK) or 0.6 (Gray) or
          #FF0000 (html RGB) or FF0000 (hexa RGB) are accepted.

	* \v accent was badly scaled in certain font files. 

        * Resizebox could lead to a box with NaN as dimensions !
	   
	* Add " for ''

	* Bug with \fg

	* Add a command \jlmXML which can replaces $foo by the value of foo
	  attribute.

	* Add the possibility to add a break in a line in using \-.

	* Bad type for FencedAtom.

	* Bad translation of &8821; (right guillemet) into LaTeX.

	* Issue with default color in TeXIcon.

	* Fix build problems.

	* Change FSF address in LICENSE files.

	* Add a check !=null in cache.

	* Bugs fix: Columns was not centered in matrix env and \cot was
          displayed as \cos.
	* Add an option in jlmDynamic ([i]) to give the possibility to insert
          a group as if it was not a group.

jlatexmath (0.9.6)
        * A TeXFormula.root must not be null in partial mode.
        * Provide a manifest for the fop plugin defining the dependency on the
          jlatexmath jar package

jlatexmath (0.9.5)
	* Remove the Java reflection use and reorganization in the fonts dir.

	* Delegate the font rendering to java.

        * add \jlmText,\jlmTextit,\jlmTextbf,\jlmTextitbf and \jlmExternalFont

        * \huge\huge bug definitly fixed

        * \huge\huge foo apply two times the huge factor

        * In \overbrace{a}, the brace were misplaced.

        * Add \(...\) & \[...\], $$...$$, \begin{math}...\end{math} and
          \begin{displaymath}...\end{displaymath}

        * No display with \left in partial mode

        * The fop plugin is now available with fop 0.95 and 1.0

        * \left(...\right) was inactive in \mathsf
